@@ -40,7 +40,7 @@
  */
 
 #include "includes.h"
-RCSID("$OpenBSD: sshd.c,v 1.219 2001/12/27 20:39:58 markus Exp $");
+RCSID("$OpenBSD: sshd.c,v 1.220 2001/12/28 12:14:27 markus Exp $");
 
 #include <openssl/dh.h>
 #include <openssl/bn.h>
@@ -1358,7 +1358,7 @@ do_ssh1_kex(void)
 
 	protocol_flags = packet_get_int();
 	packet_set_protocol_flags(protocol_flags);
-	packet_done();
+	packet_check_eom();
 
 	/*
 	 * Decrypt it using our private server key and private host key (key
