@@ -55,6 +55,10 @@
      [auth1.c auth-rsa.c channels.c clientloop.c packet.c packet.h]
      [serverloop.c session.c ssh.c sshconnect1.c sshd.c ttymodes.c]
      get rid of packet_integrity_check, use packet_done() instead.
+   - markus@cvs.openbsd.org 2001/12/27 20:39:58
+     [auth1.c auth-rsa.c channels.c clientloop.c packet.c packet.h]
+     [serverloop.c session.c ssh.c sshconnect1.c sshd.c ttymodes.c]
+     get rid of packet_integrity_check, use packet_done() instead.
 
 20020121
  - (djm) Rework ssh-rand-helper:
@@ -7202,4 +7206,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1738 2002/01/22 12:11:38 djm Exp $
+$Id: ChangeLog,v 1.1739 2002/01/22 12:12:11 djm Exp $
